Fix readme path

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "Simple Tetris game model with no UI or Game engine"
 repository = "https://github.com/etoledom/tetris_core"
 homepage = "https://github.com/etoledom/tetris_core"
 documentation = "https://github.com/etoledom/tetris_core"
-readme = "https://raw.githubusercontent.com/etoledom/tetris_core/master/README.md"
+readme = "README.md"
 keywords = ["tetris", "game"]
 categories = ["games"]
 license = "GPL-3.0-only"
